// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LoadingIndicator /> > CustomAriaLabel story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-14f0y2v-StyledLoadingIndicator-style-minimal-StyledLoadingIndicator egvgfho0"
>
  <div
    class="css-n1y1zf-StyledIcon emi0zh40"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-5nwkmw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-label="Loading cats list..."
    aria-live="polite"
    class="css-knm78x-StyledText egvgfho1"
    role="status"
  >
    Loading
  </span>
</div>
`;

exports[`<LoadingIndicator /> > Default story renders snapshot 1`] = `
<div
  aria-label="Loading"
  class="css-14f0y2v-StyledLoadingIndicator-style-minimal-StyledLoadingIndicator egvgfho0"
>
  <div
    class="css-n1y1zf-StyledIcon emi0zh40"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-5nwkmw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
      data-file-name="IconLoadingLarge"
      data-testid="IconLoadingLarge"
      fillcontrast="white"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
    />
  </div>
  <span
    aria-live="polite"
    class="css-knm78x-StyledText egvgfho1"
    role="status"
  >
    Loading
  </span>
</div>
`;
